@@ -1,3 +1,12 @@
+2021-09-07  Luis Machado  <luis.machado@linaro.org>
+
+	Revert: [AArch64] MTE corefile support
+
+	2021-05-21  Luis Machado  <luis.machado@linaro.org>
+
+	* elf/common.h (NT_MEMTAG): New constant.
+	(NT_MEMTAG_TYPE_AARCH_MTE): New constant.
+
 2021-07-03  Nick Clifton  <nickc@redhat.com>
 
 	* 2.37 release branch created.
